[package]
name = "rust-echo-tls"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.17", features = ["derive"] }
rustls = { version = "0.20.6" }
rustls-pemfile = { version = "1.0.1" }
tokio = { version = "1.20.1", features = ["full"] }
tokio-rustls = { version = "0.23.4" }
